fixed width problem
horizontal scrolling was allowed
- to remove, i set body margin to 0 and removed width completely

--- a/src/App.css
+++ b/src/App.css
@@ -4,13 +4,12 @@
 
 body {
   display: block;
-  background-color: #121417;
+  margin: 0;
 }
 
 .flex-container,
 html,
 body {
-  width: 100%;
   height: 100%;
   padding: 0;
 }
@@ -34,7 +33,6 @@ html {
 }
 
 .projects-container {
-  width: 100%;
   padding: 80px 0;
   top: 50px;
   background-color: white;
@@ -109,7 +107,6 @@ html {
 .navbar {
   white-space: nowrap;
   display: inline-block;
-  width: 10rem;
   margin: 0 auto;
   margin-left: 5rem;
 }
